# sot-hrprtc-hrp2

./: CMakeLists.txt  README.md
components/: CMakeLists.txt  test-act-sot.sh  test-stop-sot.sh
components/rtc-stack-of-tasks/: CMakeLists.txt  RtcStackOfTasksComp.cpp  rtc.conf  rtc.conf-10.in  rtc.conf-14.in  rtc.conf-hrp4.in
scripts/: CMakeLists.txt  creatertc.sh
scripts/grx/: config.sh  guiinfosot.py  guisot.py  sot-hrp2.py.in  sot-hrp4.py.in  sot.py  sot.py.in  sotinfo-10.py.in  sotinfo-hrp4.py.in  sotinfo.py
src/: CMakeLists.txt  rtc-stack-of-tasks.cpp  rtc-stack-of-tasks.h
