# Copyright 2010, Olivier Stasse, JRL, CNRS/AIST
#
# This file is part of rtc-hrprtc-hrp2

# The main library name
SET(HRPRTC_HRP_LIB_NAME "RtcStackOfTasks")

#Build Foot Step Planner
SET(LIBRARY_NAME ${HRPRTC_HRP_LIB_NAME})

# Foot Step Planner library sources
SET(${LIBRARY_NAME}_SOURCES
  rtc-stack-of-tasks.cpp
)

ADD_LIBRARY(${LIBRARY_NAME}
  SHARED
  ${${LIBRARY_NAME}_SOURCES})

SET_TARGET_PROPERTIES(${LIBRARY_NAME}
  PROPERTIES
  SOVERSION ${PROJECT_VERSION}
  INSTALL_RPATH ${CMAKE_INSTALL_LIBDIR}
  PREFIX "")

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} openrtm-aist)
PKG_CONFIG_USE_COMPILE_DEPENDENCY(${LIBRARY_NAME} "sot-core")

INSTALL(TARGETS ${LIBRARY_NAME} 
  DESTINATION ${CMAKE_INSTALL_LIBDIR})

IF(GRX_PREFIX)
  INSTALL(TARGETS ${LIBRARY_NAME}
    DESTINATION ${GRX_PREFIX}/lib )
ENDIF(GRX_PREFIX)
