# Copyright 2010, Olivier Stasse, JRL, CNRS/AIST
#
# This file is part of FootStePlannerRTC.

# The component itself.
SET(LTARGET rtc-stack-of-tasks-comp)
ADD_EXECUTABLE(${LTARGET}
  RtcStackOfTasksComp.cpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)

IF(GRX_PREFIX)
  INCLUDE_DIRECTORIES(${GRX_PREFIX}/include/rtm/idl/)
  INCLUDE_DIRECTORIES(${GRX_PREFIX}/include/rtm/)	
  INCLUDE_DIRECTORIES(${GRX_PREFIX}/include/)	
  MESSAGE(STATUS "Included : ${GRX_PREFIX}/include/rtm/idl/")
ENDIF(GRX_PREFIX)

PKG_CONFIG_USE_DEPENDENCY(${LTARGET} openrtm-aist)
PKG_CONFIG_USE_DEPENDENCY(${LTARGET} openrtm-aist)
PKG_CONFIG_USE_COMPILE_DEPENDENCY(${LTARGET} "sot-core")

MESSAGE(STATUS "*********************************************")
MESSAGE(STATUS "HRPRTC_HRP2_LIB_NAME :${HRPRTC_HRP2_LIB_NAME}")
MESSAGE(STATUS "*********************************************")

TARGET_LINK_LIBRARIES(${LTARGET} "RtcStackOfTasks")
TARGET_LINK_LIBRARIES(${LTARGET} RTC)
TARGET_LINK_LIBRARIES(${LTARGET} omniORB4)

CONFIGURE_FILE(rtc.conf ${CMAKE_CURRENT_BINARY_DIR} @ONLY)
#CONFIGURE_FILE(FastReplanningRTCComp.sh ${CMAKE_CURRENT_BINARY_DIR} @ONLY)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/rtc.conf
  DESTINATION bin/${PROJECT_NAME}/RtcStackOfTasksComp/ CONFIGURATIONS Release Debug
)

INSTALL(TARGETS ${LTARGET}
  RUNTIME DESTINATION bin/${PROJECT_NAME}/RtcStackOfTasksComp/ CONFIGURATIONS Release Debug
)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/RtcStacksOfTasksComp.sh
  DESTINATION bin PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)




