# Copyright 2010, Olivier Stasse, JRL, CNRS/AIST
#
# This file is part of FootStePlannerRTC.

# The component itself.
SET(LTARGET rtc-stack-of-tasks-comp)
ADD_EXECUTABLE(${LTARGET}
  RtcStackOfTasksComp.cpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)

IF(GRX_PREFIX)
  INCLUDE_DIRECTORIES(${GRX_PREFIX}/include/rtm/idl/)
  INCLUDE_DIRECTORIES(${GRX_PREFIX}/include/rtm/)	
  INCLUDE_DIRECTORIES(${GRX_PREFIX}/include/)	
  MESSAGE(STATUS "Included : ${GRX_PREFIX}/include/rtm/idl/")
ENDIF(GRX_PREFIX)

PKG_CONFIG_USE_DEPENDENCY(${LTARGET} openrtm-aist)
PKG_CONFIG_USE_COMPILE_DEPENDENCY(${LTARGET} "sot-core")

MESSAGE(STATUS "*********************************************")
MESSAGE(STATUS "HRPRTC_HRP_LIB_NAME :${HRPRTC_HRP_LIB_NAME}")
MESSAGE(STATUS "*********************************************")

TARGET_LINK_LIBRARIES(${LTARGET} "RtcStackOfTasks")
TARGET_LINK_LIBRARIES(${LTARGET} RTC)
TARGET_LINK_LIBRARIES(${LTARGET} omniORB4)

FOREACH(ROBOT ${GRX_ROBOTS})
  IF (${ROBOT} STREQUAL HRP2LAAS)
    CONFIGURE_FILE(rtc.conf-14.in ${CMAKE_CURRENT_BINARY_DIR}/${ROBOT}/rtc.conf @ONLY)
  ELSEIF (${ROBOT} STREQUAL HRP2JRL)
    CONFIGURE_FILE(rtc.conf-10.in ${CMAKE_CURRENT_BINARY_DIR}/${ROBOT}/rtc.conf @ONLY)
  ELSEIF (${ROBOT} STREQUAL HRP4LIRMM)
    CONFIGURE_FILE(rtc.conf-hrp4.in ${CMAKE_CURRENT_BINARY_DIR}/${ROBOT}/rtc.conf @ONLY)
  ENDIF ()
  # install the file in the appropriated folder.
  INSTALL(TARGETS ${LTARGET}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/${ROBOT}/bin )

  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${ROBOT}/rtc.conf
    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/${ROBOT}/bin/RtcStackOfTasksComp/ 
  )
ENDFOREACH(ROBOT)

IF((GRX_PREFIX) AND (NOT ROBOTPKG))
  FOREACH(ROBOT ${GRX_ROBOTS})  
    # install the file in the appropriated folder.
    INSTALL(TARGETS ${LTARGET}
      DESTINATION ${GRX_PREFIX}/${ROBOT}/bin )

    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${ROBOT}/rtc.conf
      DESTINATION ${GRX_PREFIX}/${ROBOT}/bin/RtcStackOfTasksComp/ 
    )
  ENDFOREACH(ROBOT)
ENDIF((GRX_PREFIX) AND (NOT ROBOTPKG))


